Fix card preview pane on firefox

--- a/css/cardSearch.css
+++ b/css/cardSearch.css
@@ -160,6 +160,8 @@ button.btn-primary {
   .cs-card-preview-pane {
     height: 100vh;
     position: fixed;
+    width: -moz-available;
+}
   }
 }
 @media(max-width: 992px) {
